# tonari

./: .env.example  .gitattributes  .gitignore  Justfile  LICENSE  agents.md  claude.md  docker-compose.yml  gemini.md  package-lock.json  package.json  readme.md  to-dos.md
.ai/: sync.sh
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/agents/: __init__.py  base_agent.py  explanation_agent.py  explanation_generator_v2.py  furigana.py  prompts.py  translation_agent.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial_schema.py  0002_add_work_source_fields.py  10bfc5549ef2_workprompt_created_at.py  26a2bf9dc2bf_work_prompts.py  6727872b16b1_add_scrape_jobs.py  6f045d79ba94_scrape_job_error_tracking.py  77439a9ac036_chapter_last_read_at.py  78bfe9799614_chapter_groups.py  8c8dfd2915ad_work_prompt_tables.py  8eb2a39579b1_chapter_source_chapter_id.py  9b336c20d318_add_chapter_sort_key.py  a21635cef4ae_explanation.py  af989bf1dba4_add_work_jlpt_level.py  c3b92026c9a1_add_prompt_deleted_at.py  c7b22fe6a81e_translation_explanation_tables.py
backend/app/: config.py  db.py  explanation_schemas.py  main.py  models.py  prompt_overrides.py  schemas.py  segment_utils.py  syosetu_client.py  translation_service.py
backend/app/clients/: __init__.py  base.py  requests_client.py
backend/app/kakuyomu/: __init__.py  parser.py  scraper.py
backend/app/routers/: chapter_groups.py  chapter_translations.py  chapters.py  ingest.py  lab.py  models.py  prompts.py  works.py
backend/app/scrapers/: __init__.py  base.py  exceptions.py  registry.py  text.py  types.py
backend/app/syosetu/: __init__.py  parser.py  scraper.py
backend/app/utils/: sentence_splitter.py
backend/constants/: llm.py
backend/observability/: __init__.py  langfuse_client.py
backend/scripts/: check_db_state.py  check_duplicates.py  cleanup_duplicates.py  sanity_check.py
backend/services/: __init__.py  chapter_groups.py  chapters.py  exceptions.py  explanation_generation_registry.py  explanation_service.py  explanation_stream.py  explanation_workflow.py  explanation_workflow_v2.py  prompt.py  scrape_manager.py  translation_stream.py  translation_workflow.py  utils.py  works.py
backend/tests/: conftest.py  test_api.py  test_async_scraping.py  test_chapter_groups.py  test_chapters_service.py  test_explanation_workflow.py  test_kakuyomu_parser.py  test_kakuyomu_scraper.py  test_migrations.py  test_prompts_validation.py  test_sentence_splitter.py  test_syosetu_parser.py  test_translation_workflow.py  test_works_api.py
backend/tests/fixtures/kakuyomu/: episode.html  work.html
backend/tests/routers/: test_lab.py
docs/: north-star.md  translation-agent.md  translation-ux-prd.md  work-prompt-todo.md
frontend/: Dockerfile  (+7 more)
(+117 files in other folders)
