[project]
name = "tonari-backend"
version = "0.0.1"
description = "Prototype backend for LLM-guided JP→EN translation (Syosetu connector)"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "SQLAlchemy==2.0.35",
  "psycopg2-binary==2.9.9",
  "pydantic==2.9.2",
  "pydantic-settings==2.6.1",
  "httpx==0.27.2",
  "beautifulsoup4==4.12.3",
  "lxml==5.3.0",
  "python-dotenv==1.0.1"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

