[project]
name = "tonari-backend"
version = "0.0.1"
description = "Prototype backend for LLM-guided JP→EN translation (Syosetu connector)"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "SQLAlchemy==2.0.35",
  "psycopg2-binary==2.9.9",
  "pydantic==2.9.2",
  "pydantic-settings==2.6.1",
  "httpx==0.27.2",
  "requests==2.32.3",
  "beautifulsoup4==4.12.3",
  "lxml==5.3.0",
  "python-dotenv==1.0.1",
  "alembic==1.13.2"
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.2",
  "ruff==0.6.9"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

